<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_navi"
        android:title="@string/action_navi"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_credits"
        android:title="@string/action_credits"
        android:orderInCategory="110"
        android:showAsAction="never" />
    <item android:id="@+id/action_listview"
        android:title="@string/action_listview"
        android:orderInCategory="120"
        android:showAsAction="never" />
</menu>
