<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.cloudsense.automation.katy.DevicesActivity" >
    <item android:id="@+id/action_main"
        android:title="@string/action_main"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_credits"
        android:title="@string/action_credits"
        android:orderInCategory="110"
        android:showAsAction="never" />


</menu>
