<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/dialogfragment_title"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.cloudsense.automation.katy.fragments.MyDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi" />

    <!-- android:entries="@array/network_arrays" -->
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="left|top"
        android:layout_below="@id/network"
         />
    <TextView
        android:id="@+id/network2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:text="@string/password" />

    <!--android:ems="10"
    android:layout_marginLeft="50dp"
    -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText"
        android:layout_below="@id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="(unchanged)"  />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:id="@+id/checkBox" />

</LinearLayout>
